<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 Hermann Krumrey <hermann@krumreyh.com>

This file is part of bundesliga-tippspiel-android.

bundesliga-tippspiel-android is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

bundesliga-tippspiel-android is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with bundesliga-tippspiel-android.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Hk-Bets</string>

    <string name="login_screen_title">Login</string>
    <string name="login_screen_username">Username</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_remember_me">Remember Me?</string>
    <string name="login_screen_button_title">Login</string>
    <string name="login_screen_logo_description">The Logo of the Website</string>
    <string name="login_error_title">Login Failed</string>
    <string name="login_error_body">Wrong username or password</string>
    <string name="no_account_button_title">No Account?</string>

    <string name="bet_submit_button">Submit</string>
    <string name="home_team_logo_description">The Home Team\'s Logo</string>
    <string name="away_team_logo_description">The Away Team\'s Logo</string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="left_arrow"><![CDATA[<]]></string>

    <string name="bets_matchday_title">Match Day %d</string>
    <string name="bets_matchday_title_default">Match Day</string>
    <string name="bets_fetching_error_title">Failed to Fetch bets.</string>
    <string name="bets_fetching_error_body">You will now be logged out of the application</string>
    <string name="bets_betting_error_title">Betting failed</string>
    <string name="bets_betting_error_body">Your bet could not be processed</string>

    <string name="leaderboard_button_title">Leaderboard</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="logout_button_title">Logout</string>
    <string name="main_menu_title">…</string>

    <string name="leaderboard_position_dummy">1</string>
    <string name="leaderboard_username_dummy">Username</string>
    <string name="leaderboard_points_dummy">100</string>

    <string name="home_team_logo_caption">The Home Team Logo</string>
    <string name="away_team_logo_caption">The Away Team Logo</string>
    <string name="points_divider">:</string>
    <string name="match_goals_title">Goals</string>
    <string name="match_bets_title">Bets</string>
    <string name="dummy_string">-</string>
    <string name="update_button_text">Update</string>

    <string name="goal_type_description">Icon indicating the type of goal</string>

    <string name="leaderboard_header_position">#</string>
    <string name="leaderboard_header_username">Username</string>
    <string name="leaderboard_header_points">Points</string>
</resources>
